All TV devices have permanent DPads.
Bug: 17493314
Change-Id: Ie198fc4cc242c987ac618f7ad956cf5e00146a13

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -45,4 +45,7 @@
     <!-- Override long press on home: launch assist intent. -->
     <integer name="config_longPressOnHomeBehavior">2</integer>
 
+    <!-- Override configuration check for dpad so that we always appear to have one -->
+    <bool name="config_hasPermanentDpad">true</bool>
+
 </resources>
